dev: added user csv history handlers, edited tests
