# docs/swagger.yaml
@@ -191,5 +191,31 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/github_com_unbeman_av-prac-task_internal_model.OutputError'
-      summary: Get user's segments action history
+      summary: Get user's segments history link to download
+  /api/v1/segments/user/history/{filename}:
+    get:
+      parameters:
+      - description: file name
+        in: path
+        name: filename
+        required: true
+        type: string
+      produces:
+      - text/csv
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_unbeman_av-prac-task_internal_model.OutputError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/github_com_unbeman_av-prac-task_internal_model.OutputError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_unbeman_av-prac-task_internal_model.OutputError'
+      summary: Get user's segments history csv file
 swagger: "2.0"
