# internal/handlers/http.go
@@ -1,7 +1,7 @@
+// Package handlers describes server router and handlers methods.
 package handlers
 
 import (
-	"encoding/csv"
 	"errors"
 	"fmt"
 	logger "github.com/chi-middleware/logrus-logger"
@@ -17,6 +17,7 @@ import (
 	"github.com/unbeman/av-prac-task/internal/services"
 )
 
+// HTTPHandlers
 type HTTPHandlers struct {
 	*chi.Mux
 	userService    *services.UserService
@@ -29,21 +30,23 @@ func GetHandlers(userService *services.UserService, segmentService *services.Seg
 		userService:    userService,
 		segmentService: segmentService,
 	}
+
 	h.Use(logger.Logger("router", log.New()))
 	h.Get("/swagger/*", httpSwagger.Handler())
 	h.Route("/api/v1/", func(router chi.Router) {
 		router.Route("/segments/user", func(r chi.Router) {
 			r.Get("/{user_id}", h.GetActiveUserSegments)
-			r.Get("/{user_id}/csv", h.GetUserSegmentsHistory)
+			r.Get("/{user_id}/csv", h.GenerateUserSegmentsHistory)
 			r.Post("/{user_id}", h.UpdateUserSegments)
+			r.Get("/history/{filename}", h.GetUserSegmentsHistoryFile)
 		})
 
 		router.Route("/segment", func(r chi.Router) {
 			r.Post("/", h.CreateSegment)
 			r.Delete("/{slug}", h.DeleteSegment)
-			r.Get("/{slug}", h.GetSegment)
 		})
 	})
+
 	return h, nil
 }
 
@@ -101,26 +104,6 @@ func (h HTTPHandlers) DeleteSegment(writer http.ResponseWriter, request *http.Re
 	}
 
 	render.Status(request, http.StatusOK)
-}
-
-// todo: remove
-func (h HTTPHandlers) GetSegment(writer http.ResponseWriter, request *http.Request) {
-	input := &model.SegmentInput{}
-
-	err := input.FromURI(request)
-	if err != nil {
-		h.processError(writer, request, fmt.Errorf("%w: %v", ErrInvalidRequest, err))
-		return
-	}
-
-	segment, err := h.segmentService.GetSegment(request.Context(), input)
-	if err != nil {
-		h.processError(writer, request, err)
-		return
-	}
-
-	render.Status(request, http.StatusOK)
-	render.Render(writer, request, segment)
 }
 
 // UpdateUserSegments godoc
@@ -181,8 +164,8 @@ func (h HTTPHandlers) GetActiveUserSegments(writer http.ResponseWriter, request 
 	render.Render(writer, request, segments)
 }
 
-// GetUserSegmentsHistory godoc
-// @Summary Get user's segments action history
+// GenerateUserSegmentsHistory godoc
+// @Summary Get user's segments history link to download
 // @Accept json
 // @Produce json
 // @Param user_id path uint true "User ID"
@@ -193,9 +176,9 @@ func (h HTTPHandlers) GetActiveUserSegments(writer http.ResponseWriter, request 
 // @Failure 404 {object} model.OutputError
 // @Failure 500 {object} model.OutputError
 // @Router /api/v1/segments/user/{user_id}/csv [get]
-func (h HTTPHandlers) GetUserSegmentsHistory(writer http.ResponseWriter, request *http.Request) {
+func (h HTTPHandlers) GenerateUserSegmentsHistory(writer http.ResponseWriter, request *http.Request) {
 	input := &model.UserSegmentsHistoryInput{}
-	log.Info("WE ARE IN GetUserSegmentsHistory")
+
 	err := input.FromURI(request)
 	if err != nil {
 		h.processError(writer, request, fmt.Errorf("%w: %s", ErrInvalidRequest, err))
@@ -205,18 +188,39 @@ func (h HTTPHandlers) GetUserSegmentsHistory(writer http.ResponseWriter, request
 	//todo: go generateHist
 	//todo: return file link to hist + status accepted
 
-	history, err := h.userService.GetUserSegmentsHistory(request.Context(), input)
+	filename, err := h.userService.GenerateUserSegmentsHistoryFile(request.Context(), input)
 	if err != nil {
 		h.processError(writer, request, err)
 		return
 	}
 
-	hw := csv.NewWriter(writer)
-	hw.WriteAll(history)
-
 	render.Status(request, http.StatusOK)
+	render.Render(writer, request, model.UserSegmentsHistoryOutput{Link: fmt.Sprintf("%s/history/%s", request.Host, filename)})
 }
 
+// GetUserSegmentsHistoryFile godoc
+// @Summary Get user's segments history csv file
+// @Produce text/csv
+// @Param filename path string true "file name"
+// @Success 200
+// @Failure 400 {object} model.OutputError
+// @Failure 404 {object} model.OutputError
+// @Failure 500 {object} model.OutputError
+// @Router /api/v1/segments/user/history/{filename} [get]
+func (h HTTPHandlers) GetUserSegmentsHistoryFile(writer http.ResponseWriter, request *http.Request) {
+	filename := chi.URLParam(request, "filename")
+
+	log.Infof("requesting file: %s", filename)
+
+	filePath, err := h.userService.DownloadUserSegmentsHistory(filename)
+	if err != nil {
+		h.processError(writer, request, err)
+	}
+
+	http.ServeFile(writer, request, filePath)
+}
+
+// processError handle app errors.
 func (h HTTPHandlers) processError(w http.ResponseWriter, r *http.Request, err error) {
 	var httpCode int
 	switch {
@@ -225,6 +229,8 @@ func (h HTTPHandlers) processError(w http.ResponseWriter, r *http.Request, err e
 	case errors.Is(err, database.ErrAlreadyExists):
 		httpCode = http.StatusConflict
 	case errors.Is(err, database.ErrNotFound):
+		httpCode = http.StatusNotFound
+	case errors.Is(err, services.ErrFileNotFound):
 		httpCode = http.StatusNotFound
 	default:
 		httpCode = http.StatusInternalServerError
